<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bagel91.tamojka.fuel.PetrolFragment">

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/engLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginBetweenLayouts"
                android:orientation="horizontal"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="@string/engType"
                    android:textSize="@dimen/textSizeLayouts" />

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/petrolBtn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/engPetrol" />

                    <RadioButton
                        android:id="@+id/dieselBtn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/engDiesel" />
                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginBetweenLayouts"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvEngSize"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.6"
                    android:text="@string/engSize"
                    android:textSize="@dimen/textSizeLayouts" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/edEngValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:minWidth="@dimen/minWidthET"
                        android:text="1000" />

                    <TextView
                        android:id="@+id/tvCM"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="left|center_vertical"
                        android:text="@string/cmSize" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/LinearLayout01"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginBetweenLayouts"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/TextView01"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.6"
                    android:text="@string/vehicleAge"
                    android:textSize="@dimen/textSizeLayouts" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <Spinner
                        android:id="@+id/spinner1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:entries="@array/listAge" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginBetweenLayouts"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvAutoCost"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.6"
                    android:text="@string/vehicleCost"
                    android:textSize="@dimen/textSizeLayouts" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/edAutoCost"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:minWidth="@dimen/minWidthET"
                        android:text="5000" />

                    <Spinner
                        android:id="@+id/spinCurrency"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:entries="@array/currency" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginBetweenLayouts"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/tvResult"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:gravity="center"
                    android:textAppearance="?android:attr/textAppearanceLarge" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginBetweenLayouts"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/currency"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btnUpdate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/update" />

                </LinearLayout>
            </LinearLayout>


        </LinearLayout>


    </ScrollView>

</FrameLayout>
